--- a/_posts/2022-04-17-primes.md
+++ b/_posts/2022-04-17-primes.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title:  "Numeros Primos"
+title:  "Números Primos"
 date:   17/04/2022 14:00:00 -0300
+date:   17/04/2022 15:00:00 -0300
 tags: primes
 ---
 
@@ -10,7 +11,7 @@ tags: primes
 Um número é classificado como primo se ele é maior do que um e é divisível apenas por um e por ele mesmo.
 Apenas números naturais são classificados como primos (unsigned para programadores).
 
-A maneira mais simples de saber se um numero é primo ou não é:
+A maneira mais simples de saber se um número é primo ou não é:
 
 ~~~c
 bool is_prime_v0(uint64_t n)
@@ -26,12 +27,12 @@ bool is_prime_v0(uint64_t n)
 }
 ~~~
 
-Esta implementação é pouco eficiente, pois testamos todos os numeros menores que N.
-O valor maximo que precisamos testar é a raiz quadrada do numero.
+Esta implementação é pouco eficiente, pois testamos todos os números menores que N.
+O valor maximo que precisamos testar é a raiz quadrada do número.
 Um exemplo para o 49, precisamos testar só até o 7.
-Mas no caso de N = 26, temos o numero 13, que é maior que sua raiz quadrada, mas esse numero não precisa ser testado, o algoritmo retornará falso ao testar o 2;
+Mas no caso de N = 26, temos o número 13, que é maior que sua raiz quadrada, mas esse número não precisa ser testado, o algoritmo retornará falso ao testar o 2;
 
-Nessa implementação testamos todos os numero desde que a multiplicação deles seja menos ou igual a N
+Nessa implementação testamos todos os número desde que a multiplicação deles seja menos ou igual a N
 
 ~~~c
 //  9.185s
@@ -60,7 +61,7 @@ x | Quantidade
 
 Esta implementação reduz o tempo em sqrt(n).
 
-Podemos continuar otimizando, por exemplo só procurar numeros impares.
+Podemos continuar otimizando, por exemplo só procurar números ímpares.
 Está otimização é chamada de Factorization Wheel.
 
 ~~~c
